Bug 226724 - Kwrite crach after I close it
Summary: Kwrite crach after I close it
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: kwrite (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 227619 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-02-13 21:07 UTC by Zayed Al-Saidi
Modified: 2010-02-19 10:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zayed Al-Saidi 2010-02-13 21:07:27 UTC
Application: kwrite (4.4.00 (KDE 4.4.0) "release 222")
KDE Platform Version: 4.4.00 (KDE 4.4.0) "release 222"
Qt Version: 4.6.1
Operating System: Linux 2.6.31.8-0.1-default i686
Distribution: "openSUSE 11.2 (i586)"

-- Information about the crash:
What I did ?

First I wrote two sentance one in English and the other in Arabic
Second, I bring the change spelling dictionary bar and I keep change from Arabic to English 
Third I quit the Kwrite
finally it is crached :) 

 -- Backtrace:
Application: KWrite (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb52dd980 (LWP 13307))]

Thread 2 (Thread 0xb17d9b70 (LWP 13308)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb6a14d95 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb1963b77 in ?? () from /usr/lib/libQtScript.so.4
#3  0xb1963bbf in ?? () from /usr/lib/libQtScript.so.4
#4  0xb6a106e5 in start_thread () from /lib/libpthread.so.0
#5  0xb6a10600 in ?? () from /lib/libpthread.so.0

Thread 1 (Thread 0xb52dd980 (LWP 13307)):
[KCrash Handler]
#6  0xb3406128 in KTextEditor::SmartRange::removeWatcher(KTextEditor::SmartRangeWatcher*) () from /usr/lib/libktexteditor.so.4
#7  0xb1c87bf2 in KateSpellingMenu::~KateSpellingMenu (this=0x81ef528, __in_chrg=<value optimized out>) at /usr/src/debug/kdelibs-4.4.0/kate/spellcheck/spellingmenu.cpp:53
#8  0xb6ba3b1c in QObjectPrivate::deleteChildren() () from /usr/lib/libQtCore.so.4
#9  0xb610c6c0 in QWidget::~QWidget() () from /usr/lib/libQtGui.so.4
#10 0xb3407d49 in KTextEditor::View::~View() () from /usr/lib/libktexteditor.so.4
#11 0xb1c11f4b in KateView::~KateView (this=0x81f08d0, __in_chrg=<value optimized out>) at /usr/src/debug/kdelibs-4.4.0/kate/view/kateview.cpp:289
#12 0xb1b67588 in KateDocument::~KateDocument (this=0x8175d50, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>) at /usr/src/debug/kdelibs-4.4.0/kate/document/katedocument.cpp:302
#13 0xb4ee69f9 in KWrite::~KWrite (this=0x8152e30, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>) at /usr/src/debug/kdebase-4.4.0/apps/kwrite/kwritemain.cpp:141
#14 0xb6ba36e3 in qDeleteInEventHandler(QObject*) () from /usr/lib/libQtCore.so.4
#15 0xb6ba4e88 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#16 0xb6104400 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#17 0xb652f964 in QMainWindow::event(QEvent*) () from /usr/lib/libQtGui.so.4
#18 0xb6ee1334 in KMainWindow::event(QEvent*) () from /usr/lib/libkdeui.so.5
#19 0xb6f03db2 in KXmlGuiWindow::event(QEvent*) () from /usr/lib/libkdeui.so.5
#20 0xb60a42ac in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#21 0xb60ab188 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#22 0xb6e26cb1 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#23 0xb6b93fbe in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#24 0xb6b969c3 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#25 0xb6b96b1c in QCoreApplication::sendPostedEvents(QObject*, int) () from /usr/lib/libQtCore.so.4
#26 0xb6bc104d in ?? () from /usr/lib/libQtCore.so.4
#27 0xb580b4c2 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#28 0xb580ed98 in ?? () from /usr/lib/libglib-2.0.so.0
#29 0xb580eebe in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#30 0xb6bc0b31 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#31 0xb61646ca in ?? () from /usr/lib/libQtGui.so.4
#32 0xb6b9262d in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#33 0xb6b92a79 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#34 0xb6b96bf0 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#35 0xb60a4354 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#36 0xb4eebfe4 in kdemain (argc=1, argv=0x80938b8) at /usr/src/debug/kdebase-4.4.0/apps/kwrite/kwritemain.cpp:782
#37 0x0804e4af in launch (argc=134823316, _name=<value optimized out>, args=<value optimized out>, cwd=0x0, envc=1, envs=0x8093d88 "DISPLAY=:0.0", reset_env=false, tty=0x0, avoid_loops=false, 
    startup_id_str=0x8093d99 "linux-n2tt;1266089862;728149;7405_TIME8049725") at /usr/src/debug/kdelibs-4.4.0/kinit/kinit.cpp:717
#38 0x0804f147 in handle_launcher_request (sock=<value optimized out>, who=<value optimized out>) at /usr/src/debug/kdelibs-4.4.0/kinit/kinit.cpp:1209
#39 0x0804f594 in handle_requests (waitForPid=<value optimized out>) at /usr/src/debug/kdelibs-4.4.0/kinit/kinit.cpp:1402
#40 0x0805032f in main (argc=4, argv=0xbfe06af4, envp=0xbfe06b08) at /usr/src/debug/kdelibs-4.4.0/kinit/kinit.cpp:1841

Reported using DrKonqi
Comment 1 Michel Ludwig 2010-02-14 11:19:38 UTC
Did you use the spelling suggestions/corrections menu in the popup menu before the crash occurred?
Comment 2 Zayed Al-Saidi 2010-02-14 11:43:20 UTC
(In reply to comment #1)
> Did you use the spelling suggestions/corrections menu in the popup menu before
> the crash occurred?

Yes I did, but kwrite did not crash directly.
Comment 3 Michel Ludwig 2010-02-14 11:46:26 UTC
Ok, I suspect that if you don't use the menu, then nothing will happen

The next step will be to find a way to reproduce the crash reliably. I'm still trying here but it doesn't want to crash.
Comment 4 Michel Ludwig 2010-02-14 17:19:07 UTC
Ok, I think I've got it now.

A fix has been committed in revision 1090082.
Comment 5 Zayed Al-Saidi 2010-02-14 17:53:51 UTC
(In reply to comment #4)
> Ok, I think I've got it now.
> 
> A fix has been committed in revision 1090082.

Thanks Michel for your time to fix my favorite kde application :)
Comment 6 Dominik Haumann 2010-02-19 10:15:58 UTC
*** Bug 227619 has been marked as a duplicate of this bug. ***