Don't access 'm_currentMisspelledRange' anymore when a spelling menu object is destroyed as it might point to a range that has already been deleted.

BUG: 226724


svn path=/trunk/KDE/kdelibs/kate/; revision=1090082